Added tournament bundle.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+ClubTournamentBundle:
+    resource: "@ClubTournamentBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 ClubRequestBundle:
     resource: "@ClubRequestBundle/Controller/"
     type:     annotation
