--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,3 +1,7 @@
+jms_security_extra:
+    secure_all_services: false
+    expressions: true
+
 security:
     encoders:
         Club\UserBundle\Entity\User:
@@ -6,8 +10,8 @@ security:
             iterations: 10
 
     role_hierarchy:
-        ROLE_SUPER_ADMIN: [ROLE_ADMIN]
-        ROLE_ADMIN: [ROLE_BLOG_ADMIN,ROLE_BOOKING_ADMIN,ROLE_EVENT_ADMIN,ROLE_MEMBER_ADMIN,ROLE_MESSAGE_ADMIN,ROLE_MATCH_ADMIN,ROLE_SHOP_ADMIN,ROLE_TEAM_ADMIN, ROLE_PASSKEY_ADMIN, ROLE_TOURNAMENT_ADMIN]
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
+        ROLE_ADMIN: [ROLE_BLOG_ADMIN, ROLE_BOOKING_ADMIN, ROLE_EVENT_ADMIN, ROLE_MEMBER_ADMIN, ROLE_MESSAGE_ADMIN, ROLE_MATCH_ADMIN, ROLE_SHOP_ADMIN, ROLE_TEAM_ADMIN,  ROLE_PASSKEY_ADMIN,  ROLE_TOURNAMENT_ADMIN]
 
     providers:
         main:
