Rename class tournament to bracket.

--- a/src/Club/TournamentBundle/Resources/config/services.yml
+++ b/src/Club/TournamentBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-  club_tournament.tournament:
-    class: Club\TournamentBundle\Helper\Tournament
+  club_tournament.bracket:
+    class: Club\TournamentBundle\Helper\Bracket
     arguments: []
