Added enable and disable for players request.

--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -91,6 +91,9 @@ club_mail:
 club_feedback:
     enabled: true
 
+club_request:
+    enabled: true
+
 club_checkin:
     allowed_ip:
         - 127.0.0.1
