--- a/src/Club/InstallerBundle/Resources/config/listener.yml
+++ b/src/Club/InstallerBundle/Resources/config/listener.yml
@@ -3,4 +3,4 @@ services:
     class: Club\InstallerBundle\Listener\Redirect
     arguments: [@service_container]
     tags:
-      - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
+      - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 50 }
