--- a/src/Club/EventBundle/Resources/config/listener.yml
+++ b/src/Club/EventBundle/Resources/config/listener.yml
@@ -4,8 +4,5 @@ services:
     arguments: [@router, @security.context, @translator]
     tags:
       - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender }
-  club.eventbundle.listener.left_menu_render_listener:
-    class: Club\EventBundle\Listener\MenuListener
-    arguments: [@router, @security.context, @translator]
-    tags:
       - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
+      - { name: kernel.event_listener, event: dash_menu.render, method: onDashMenuRender }
