--- a/src/Club/RequestBundle/Resources/config/listener.yml
+++ b/src/Club/RequestBundle/Resources/config/listener.yml
@@ -4,3 +4,4 @@ services:
     arguments: [@router, @security.context, @translator]
     tags:
       - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender }
+      - { name: kernel.event_listener, event: dash_menu.render, method: onDashMenuRender }
