--- a/src/Club/TeamBundle/Resources/config/listener.yml
+++ b/src/Club/TeamBundle/Resources/config/listener.yml
@@ -3,12 +3,9 @@ services:
     class: Club\TeamBundle\Listener\MenuListener
     arguments: [@router, @security.context, @translator]
     tags:
-      - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
-  club.teambundle.top_menu_listener:
-    class: Club\TeamBundle\Listener\MenuListener
-    arguments: [@router, @security.context, @translator]
-    tags:
       - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender }
+      - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
+      - { name: kernel.event_listener, event: dash_menu.render, method: onDashMenuRender }
   club.team.repetition.change:
     class: Club\TeamBundle\Listener\GenerateScheduleListener
     arguments: [@doctrine.orm.entity_manager, %club_team.future_occurs%]
