Updated menu items.

--- a/src/Club/UserBundle/Resources/config/listener.yml
+++ b/src/Club/UserBundle/Resources/config/listener.yml
@@ -29,7 +29,7 @@ services:
     class: Club\UserBundle\Listener\MenuListener
     arguments: [@router, @security.context, @translator]
     tags:
-      - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender }
+      - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender, priority: 50 }
       - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
       - { name: kernel.event_listener, event: dash_menu.render, method: onDashMenuRender }
   club.user.dashboard_listener:
