Updated security settings.

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,7 +7,7 @@ security:
 
     role_hierarchy:
         ROLE_SUPER_ADMIN: [ROLE_ADMIN]
-        ROLE_ADMIN: [ROLE_BLOG_ADMIN,ROLE_BOOKING_ADMIN,ROLE_EVENT_ADMIN,ROLE_MEMBER_ADMIN,ROLE_MESSAGE_ADMIN,ROLE_MATCH_ADMIN,ROLE_SHOP_ADMIN,ROLE_TEAM_ADMIN, ROLE_PASSKEY_ADMIN]
+        ROLE_ADMIN: [ROLE_BLOG_ADMIN,ROLE_BOOKING_ADMIN,ROLE_EVENT_ADMIN,ROLE_MEMBER_ADMIN,ROLE_MESSAGE_ADMIN,ROLE_MATCH_ADMIN,ROLE_SHOP_ADMIN,ROLE_TEAM_ADMIN, ROLE_PASSKEY_ADMIN, ROLE_NEWS_ADMIN]
 
     providers:
         main:
