Upgraded settings for clubmaster.yml

--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -90,6 +90,9 @@ club_mail:
 club_feedback:
     enabled: true
 
+club_news:
+    enabled: true
+
 club_checkin:
     allowed_ip:
         - 127.0.0.1
