--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -60,4 +60,4 @@ swiftmailer:
     host:      %mailer_host%
     username:  %mailer_user%
     password:  %mailer_password%
-    spool:     { type: memory }
+    spool:     { type: file }
