Improved menu a lot.

--- a/src/Club/FeedbackBundle/Resources/config/listener.yml
+++ b/src/Club/FeedbackBundle/Resources/config/listener.yml
@@ -3,4 +3,4 @@ services:
     class: Club\FeedbackBundle\Listener\MenuListener
     arguments: [@router, @security.context, @translator]
     tags:
-      - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender }
+      - { name: kernel.event_listener, event: top_right_menu.render, method: onTopRightMenuRender }
