Added jquery birthday type.

--- a/src/Club/LayoutBundle/Resources/config/form.yml
+++ b/src/Club/LayoutBundle/Resources/config/form.yml
@@ -15,3 +15,7 @@ services:
         class: Club\LayoutBundle\Form\JQueryDateType
         tags:
             - { name: "form.type_jquery_date", alias: "jquery_date" }
+    club_layout_form_jquery_birthday:
+        class: Club\LayoutBundle\Form\JQueryBirthdayType
+        tags:
+            - { name: "form.type_jquery_birthday", alias: "jquery_birthday" }
