Added success handler.

--- a/src/Club/UserBundle/Resources/config/services.yml
+++ b/src/Club/UserBundle/Resources/config/services.yml
@@ -2,9 +2,9 @@ services:
     failure.password.handler:
         class: Club\UserBundle\Helper\FailurePasswordHandler
         arguments: [@doctrine.orm.entity_manager]
-    login_success_handler:
-        class: Club\UserBundle\Helper\LoginSuccessHandler
-        arguments: [@service_container]
+    success.login.handler:
+        class: Club\UserBundle\Helper\SuccessLoginHandler
+        arguments: [@router, @security.context]
     clubmaster.version:
         class: Club\UserBundle\Helper\Version
     clubmaster.ban:
