--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,6 +33,7 @@ security:
             anonymous: ~
             form_login:
                 failure_handler: failure.password.handler
+                success_handler: success.login.handler
                 check_path: /login_check
                 login_path: /login
             logout:
