Fixed weather bundle.

--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -108,3 +108,7 @@ club_layout:
     #logo_url:
     #logo_title:
     title: ClubMaster
+
+club_weather:
+    city: Aalborg,Denmark
+    key: fdeb1d24d8174537121809
