--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,7 @@
 club_weather:
     resource: "@ClubWeatherBundle/Controller/"
     type:     annotation
-    prefix:   /{_locale}/weather
+    prefix:   /{_locale}/
 
 ClubInstallBundle:
     resource: "@ClubInstallerBundle/Controller/"
