Added a lot to the ranking bundle.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+club_ranking:
+    resource: "@ClubRankingBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 club_weather:
     resource: "@ClubWeatherBundle/Controller/"
     type:     annotation
