--- a/src/Club/MatchBundle/Resources/config/listener.yml
+++ b/src/Club/MatchBundle/Resources/config/listener.yml
@@ -3,9 +3,8 @@ services:
     class: Club\MatchBundle\Listener\MenuListener
     arguments: [@router, @security.context, @translator]
     tags:
-      - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender }
-      - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
-      - { name: kernel.event_listener, event: dash_menu.render, method: onDashMenuRender }
+      - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender, priority: 50 }
+      - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender, priority: 50 }
   club.match.listener.league:
     class: Club\MatchBundle\Listener\League
     arguments: [@doctrine.orm.entity_manager, @club_match.league]
