--- a/src/Club/RankingBundle/Resources/config/services.yml
+++ b/src/Club/RankingBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-    club_match.ranking:
+    club_ranking.ranking:
         class: Club\RankingBundle\Helper\Ranking
         arguments: [@doctrine.orm.entity_manager, @translator]
