Added default facebook bundle.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+club_facebook:
+    resource: "@ClubFacebookBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 club_ranking:
     resource: "@ClubRankingBundle/Controller/"
     type:     annotation
