--- a/src/Club/BookingBundle/Resources/config/listener.yml
+++ b/src/Club/BookingBundle/Resources/config/listener.yml
@@ -17,6 +17,12 @@ services:
     arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: checkin.user, method: onCheckinUser }
+  club.booking.listener.shop:
+    class: Club\BookingBundle\Listener\Shop
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: order.paid, method: onOrderPaid }
+      - { name: kernel.event_listener, event: order.cancelled, method: onOrderCancelled }
   club.booking.listener.cleanup:
     class: Club\BookingBundle\Listener\CleanupBooking
     arguments: [@service_container]
