--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -80,7 +80,7 @@ club_booking:
     cancel_minute_before: 120
     cancel_minute_created: 5
     booking_style: horizontal
-    auto_confirm: true
+    cancel_without_checkin: false
     confirm_minutes_before: 120
     confirm_minutes_after: 5
     public_user_activity: true
