--- a/src/Club/WelcomeBundle/Resources/config/listener.yml
+++ b/src/Club/WelcomeBundle/Resources/config/listener.yml
@@ -4,3 +4,9 @@ services:
     arguments: [@router, @security.context, @translator]
     tags:
       - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
+  club.welcomebundle.dashboard_listener:
+    class: Club\WelcomeBundle\Listener\DashboardListener
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: member.view, method: onMemberView }
+
