--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -45,6 +45,11 @@ club_match:
     facebook_like: true
     facebook_api: 485293888165235
 
+club_welcome:
+    google_plus: true
+    facebook_like: true
+    facebook_api: 485293888165235
+
 club_ranking:
     enabled: true
     ranking_top: 5
