Rearranged order of dashbord.

--- a/src/Club/ShopBundle/Resources/config/listener.yml
+++ b/src/Club/ShopBundle/Resources/config/listener.yml
@@ -40,7 +40,7 @@ services:
     class: Club\ShopBundle\Listener\DashboardListener
     arguments: [@doctrine.orm.entity_manager, @security.context, @templating]
     tags:
-      - { name: kernel.event_listener, event: dashboard.view, method: onDashboardView }
+      - { name: kernel.event_listener, event: dashboard.view, method: onDashboardView, priority: 65 }
       - { name: kernel.event_listener, event: admin_dashboard.view, method: onAdminDashboardView, priority: 5 }
   club.shop.fixtures.load:
     class: Club\ShopBundle\Fixtures\Load
