--- a/src/Club/EventBundle/Resources/config/listener.yml
+++ b/src/Club/EventBundle/Resources/config/listener.yml
@@ -6,3 +6,8 @@ services:
       - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender }
       - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
       - { name: kernel.event_listener, event: dash_menu.render, method: onDashMenuRender }
+  club.eventbundle.dashboard_listener:
+    class: Club\EventBundle\Listener\DashboardListener
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: dashboard.view, method: onDashboardView }
