Removed some render instead of global vars.

--- a/src/Club/LayoutBundle/Resources/config/twig.yml
+++ b/src/Club/LayoutBundle/Resources/config/twig.yml
@@ -9,3 +9,8 @@ services:
     arguments: [@service_container]
     tags:
       - { name: twig.extension }
+  club_layout_twig_application_extension:
+    class: Club\LayoutBundle\Twig\ApplicationExtension
+    arguments: [@service_container]
+    tags:
+      - { name: twig.extension }
