--- a/src/Club/ExchangeBundle/Resources/config/listener.yml
+++ b/src/Club/ExchangeBundle/Resources/config/listener.yml
@@ -5,3 +5,8 @@ services:
     tags:
       - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender }
       - { name: kernel.event_listener, event: dash_menu.render, method: onDashMenuRender }
+  club.welcomebundle.dashboard_listener:
+    class: Club\ExchangeBundle\Listener\DashboardListener
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: member.view, method: onMemberView }
