--- a/src/Club/EventBundle/Resources/config/listener.yml
+++ b/src/Club/EventBundle/Resources/config/listener.yml
@@ -10,4 +10,5 @@ services:
     class: Club\EventBundle\Listener\DashboardListener
     arguments: [@service_container]
     tags:
+      - { name: kernel.event_listener, event: member.view, method: onMemberView }
       - { name: kernel.event_listener, event: dashboard.coming, method: onDashboardComing }
