--- a/src/Club/LogBundle/Resources/config/listener.yml
+++ b/src/Club/LogBundle/Resources/config/listener.yml
@@ -30,11 +30,11 @@ services:
     arguments: [@doctrine.orm.entity_manager,@security.context]
     tags:
       - { name: kernel.event_listener, event: event.unattend, method: onEventUnattend }
-  club.logbundle.listener.cleanup_log_listener:
-    class: Club\LogBundle\Listener\CleanupLogListener
+  club.logbundle.listener.cleanup:
+    class: Club\LogBundle\Listener\Cleanup
     arguments: [@doctrine.orm.entity_manager,@security.context]
     tags:
-      - { name: kernel.event_listener, event: log.task, method: onLogTask }
+      - { name: kernel.event_listener, event: task.cleanup, method: onTaskCleanup }
   club.logbundle.listener.log_listener:
     class: Club\LogBundle\Listener\LogListener
     arguments: [@doctrine.orm.entity_manager,@security.context]
