Make use of assetic.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,7 +30,9 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [ ]
+    bundles:
+        - "ClubLayoutBundle"
+        - "ClubBookingBundle"
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
