--- a/src/Club/UserBundle/Resources/config/listener.yml
+++ b/src/Club/UserBundle/Resources/config/listener.yml
@@ -49,3 +49,8 @@ services:
     arguments: [@doctrine.orm.entity_manager]
     tags:
       - { name: kernel.event_listener, event: task.cleanup, method: onTaskCleanup }
+  club.user.listener.database_exception:
+    class: Club\UserBundle\Listener\DatabaseException
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
