--- a/src/Club/EventBundle/Resources/config/listener.yml
+++ b/src/Club/EventBundle/Resources/config/listener.yml
@@ -12,3 +12,8 @@ services:
     tags:
       - { name: kernel.event_listener, event: member.view, method: onMemberView }
       - { name: kernel.event_listener, event: dashboard.coming, method: onDashboardComing }
+  club.eventbundle.ical_listener:
+    class: Club\EventBundle\Listener\IcalListener
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: user.ical, method: onUserIcal }
