--- a/src/Club/TeamBundle/Resources/config/listener.yml
+++ b/src/Club/TeamBundle/Resources/config/listener.yml
@@ -37,3 +37,8 @@ services:
     arguments: [@doctrine.orm.entity_manager]
     tags:
       - { name: kernel.event_listener, event: fixtures.init, method: onFixturesInit }
+  club.team.fixtures.ical:
+    class: Club\TeamBundle\Listener\IcalListener
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: user.ical, method: onUserIcal }
