Added hour form to plan repeat.

--- a/src/Club/LayoutBundle/Resources/config/form.yml
+++ b/src/Club/LayoutBundle/Resources/config/form.yml
@@ -38,3 +38,8 @@ services:
         arguments: [@translator]
         tags:
             - { name: "form.type", alias: "day" }
+    club_layout_form_hour:
+        class: Club\LayoutBundle\Form\HourType
+        arguments: [@translator]
+        tags:
+            - { name: "form.type", alias: "hour" }
