Added posibility to execute scripts on migration.

--- a/src/Club/BookingBundle/Resources/config/listener.yml
+++ b/src/Club/BookingBundle/Resources/config/listener.yml
@@ -33,3 +33,8 @@ services:
     arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: user.ical, method: onUserIcal }
+  club.booking.listener.migrate:
+    class: Club\BookingBundle\Listener\Migrate
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: version.migrate, method: onVersionMigrate }
