--- a/src/Club/EventBundle/Resources/config/listener.yml
+++ b/src/Club/EventBundle/Resources/config/listener.yml
@@ -17,3 +17,8 @@ services:
     arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: user.ical, method: onUserIcal }
+  club.eventbundle.migrate:
+    class: Club\EventBundle\Listener\Migrate
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: version.migrate, method: onVersionMigrate }
