--- a/src/Club/RankingBundle/Resources/config/listener.yml
+++ b/src/Club/RankingBundle/Resources/config/listener.yml
@@ -13,3 +13,8 @@ services:
       - { name: kernel.event_listener, event: match.task, method: onMatchTask }
       - { name: kernel.event_listener, event: match.new, method: onMatchNew }
       - { name: kernel.event_listener, event: match.delete, method: onMatchDelete }
+  club.match.listener.migrate:
+    class: Club\RankingBundle\Listener\Migrate
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: version.migrate, method: OnVersionMigrate }
