Dont run onkernelrequest scripts when the installer file is still there.

--- a/src/Club/InstallerBundle/Resources/config/services.yml
+++ b/src/Club/InstallerBundle/Resources/config/services.yml
@@ -2,3 +2,6 @@ services:
   club_installer.database:
     class: Club\InstallerBundle\Helper\Database
     arguments: [@service_container]
+  club_installer.installer:
+    class: Club\InstallerBundle\Helper\InstallerFile
+    arguments: [@service_container]
