--- a/web/.htaccess
+++ b/web/.htaccess
@@ -6,5 +6,5 @@
     #</IfModule>
 
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ index.php [QSA,L]
+    RewriteRule ^(.*)$ app.php [QSA,L]
 </IfModule>
